[metadata]
name = fesom_icb_pism
description = tools for fesom-icb with pism
description-file = README.md
author = Lars Ackermann
author-email = lars.ackermann@awi.de
license = GPLv3

[entry_points]
esm_tools.plugins =
        prep_icebergs = fesom_icb_pism.plugin_functions:prep_icebergs
        apply_iceberg_calving_to_namelists = fesom_icb_pism.plugin_functions:apply_iceberg_calving_to_namelists
